--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,78 @@
+.navbar-link {
+  color: inherit;
+  text-decoration: none;
+}
+
 .navbar {
   max-width: 1200px;
   margin: 0 auto;
   padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--black-color);
+}
+
+.navbar-left h2 {
+  font-weight: 400;
+}
+
+.navbar-left h2 b {
+  font-weight: 500;
+  color: orange;
+}
+
+.navbar-right {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.navbar-right button {
+  border: 1px solid var(--border-color);
+  color: var(--black-color);
+  border-radius: 100rem;
+  background: none;
+  width: 39px;
+  height: 39px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+.navbar-right button:hover {
+  background: var(--black-color);
+  color: var(--primary-color);
+}
+
+.settings-list {
+  position: absolute;
+  list-style: none;
+  top: 4rem;
+  right: 1rem;
+  background: var(--primary-color);
+  padding: 0.5rem 0;
+  border: none;
+  border-radius: 0.5rem;
+  z-index: 2;
+  box-shadow: 0 0 10px var(--border-color);
+  transform: scale(0);
+  transform-origin: top right;
+  transition: 0.2s ease;
+}
+
+.settings-list.visible {
+  transform: scale(1);
+}
+
+.settings-list li {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.2rem 1rem;
+  cursor: pointer;
+}
+
+.settings-list li:hover {
+  background: var(--primary-color-hover);
 }
