--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,27 @@
 .navbar-link {
   color: inherit;
   text-decoration: none;
+  position: relative;
+}
+
+.main-link {
+  color: var(--black-color);
+  text-decoration: none;
+}
+
+.navbar-link::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 0;
+  background: var(--black-color);
+  bottom: -3px;
+  left: 0;
+  transition: width 0.2s ease;
+}
+
+.navbar-link:hover::after {
+  width: 100%;
 }
 
 .navbar {
@@ -15,6 +36,7 @@
 
 .navbar-left h2 {
   font-weight: 400;
+  color: var(--black-color);
 }
 
 .navbar-left h2 b {
@@ -26,6 +48,7 @@
   display: flex;
   align-items: center;
   gap: 1.5rem;
+  position: relative;
 }
 
 .navbar-right button {
@@ -49,7 +72,7 @@
   position: absolute;
   list-style: none;
   top: 4rem;
-  right: 1rem;
+  right: 0;
   background: var(--primary-color);
   padding: 0.5rem 0;
   border: none;
